dashboard werkt min opmaak❤

--- a/Rens/question3.ipynb
+++ b/Rens/question3.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -268,10 +268,10 @@
     "       legend_label=\"Crashes\", line_width=2, color=\"blue\")\n",
     "\n",
     "p.line(x='date', y='amount (merchant currency)', source=sales_source,\n",
-    "       legend_label=\"Sales\", line_width=2, color=\"red\", y_range_name=\"Sales\")\n",
+    "       legend_label=\"Sales\", line_width=2, color=\"#E6E6FA\", y_range_name=\"Sales\")\n",
     "\n",
     "p.line(x='date', y='regression', source=regression_source,\n",
-    "       legend_label=\"Sales Trend\", line_width=2, color=\"purple\", y_range_name=\"Sales\")\n",
+    "       legend_label=\"Sales Trend\", line_width=2, color=\"#E6E6FA\", y_range_name=\"Sales\")\n",
     "\n",
     "p.xaxis.major_label_orientation = \"vertical\"\n",
     "p.legend.location = \"top_left\"\n",
