--- a/Rens/question3.ipynb
+++ b/Rens/question3.ipynb
@@ -109,7 +109,7 @@
     "           x_axis_label='Date', \n",
     "           x_axis_type='datetime', \n",
     "           y_axis_label='Daily Crashes',\n",
-    "           width=1000,\n",
+    "           width=2000,\n",
     "           toolbar_location=\"above\"\n",
     "           )\n",
     "\n",
@@ -247,7 +247,7 @@
     "           x_axis_label='Date',\n",
     "           x_axis_type='datetime',\n",
     "           y_axis_label='Daily Crashes',\n",
-    "           width=1000)\n",
+    "           width=2000)\n",
     "\n",
     "p.extra_y_ranges = {\"Sales\": Range1d(start=0, end=sales_per_date[\"amount (merchant currency)\"].max() * 1.1)}\n",
     "p.add_layout(LinearAxis(y_range_name=\"Sales\", axis_label=\"Sales Amount\"), 'right')\n",
@@ -268,7 +268,7 @@
     "       legend_label=\"Crashes\", line_width=2, color=\"blue\")\n",
     "\n",
     "p.line(x='date', y='amount (merchant currency)', source=sales_source,\n",
-    "       legend_label=\"Sales\", line_width=2, color=\"#E6E6FA\", y_range_name=\"Sales\")\n",
+    "       legend_label=\"Sales\", line_width=2, color=\"orange\", y_range_name=\"Sales\")\n",
     "\n",
     "p.line(x='date', y='regression', source=regression_source,\n",
     "       legend_label=\"Sales Trend\", line_width=2, color=\"#E6E6FA\", y_range_name=\"Sales\")\n",
